Fixed footer positioning overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,7 +43,6 @@ canvas {
 }
 
 footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
